updates up to adding of new list

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
         <div class="sub-box">
         <input placeholder="Task..." class="task" ></input>
         <button class="add-button">ADD</button>
+       </div>
+
     </div>
-      </div>
+    <div class="list-box">
+        <div class="li"></div>
+        <!-- <div class="list">
+            <div class="check-box box"></div>
+            <div class="task-name box"></div>
+            <button class="delete box">X</button>
+        </div>
+        <div class="list">
+            <button class="check-box box"></button>
+            <div class="task-name box"></div>
+            <button class="delete box">X</button>
+        </div> -->
     </div>
+</div>
 </div>
   </body>
 </html>
